# Z-Sharp

./: README.md  Slang.sln  Z-Sharp.sln  index.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml
ExtraResources/: ZS-Gem-Icon.psd  ZS-Icon.psd  ZS-Logo.psd
ExtraResources/old/: ZS-Gem-Icon.psd  ZS-Logo.psd
Slang/: CMakeLists.txt  Main.cpp  SLB.h  Slang.vcxproj  Slang.vcxproj.filters  anyops.h  boost_x64_release.props  builtin.h  builtin.slg  eval.cpp  eval.h  graphics.cpp  graphics.h  main.h  olcPixelGameEngine.h  processLine.cpp  resource.h  script.sl  script.slg  strops.cpp  strops.h
Slang-Installer/: Slang-Installer.vdproj
Slang/Pong-Project/: script.slg
Slang/linux-build/: CMakeCache.txt  Makefile  Slang-Linux
Slang/tut/: 02_getting_an_image_on_the_screen.cpp
StuLang/: Main.cpp  StuLang.vcxproj  anyops.h  builtin.h  eval.cpp  graphics.h  main.h  strops.h
StuLang-Installer/: Slang-Installer.vdproj
ZSharp/: CMakeLists.txt  CMakeSettings.json  Main.cpp  ZS.h  ZSharp.vcxproj  ZSharp.vcxproj.filters  ZSharpInstallerMakerInnoSetup.iss  boost_x64_release.props  builtin.h  eval.cpp  graphics.h  resource.h  strops.cpp  strops.h
ZSharp-Installer/: ZSharp-Installer.vdproj
ZSharp/linux-build/: CMakeCache.txt  Makefile  ZSharp  cmake_install.cmake
examples/: console_application.zs
examples/Benchmark/: script.zs
examples/Platformer/: extra-include.zs  script.zs
examples/Pong-Example-Project/: script.slg  script.zs
